Change has been completed
Change has been completed

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- Hero Content -->
-    <div class="container hero-content">
+    <div class="container hero-content overflow-hidden">
         <div class="row align-items-center">
             <!-- Left: Text -->
             <div class="col-lg-6 col-md-6 col-12 text-center text-md-start mb-5 mb-md-0">
@@ -205,22 +205,36 @@
 
             <!-- Account Section -->
             <div class="col-lg-3 col-md-3 col-12 mb-4 footer-links text-md-start text-center">
-                <h6 class="footer-title">Account</h6>
+                <h6 class="footer-title ">Contact</h6>
                 <ul class="list-unstyled">
-                    <li><a href="#">Register Now</a></li>
-                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#"><div class="footer-contact">
+                        <i class="bi bi-envelope "></i>
+                        <a href="mailto:traderspay&#64;gmail.com">traderspay&#64;gmail.com</a>
+
+                        </div></a></li>
                 </ul>
             </div>
 
             <!-- Legal Section -->
             <div class="col-lg-3 col-md-3 col-12 footer-links text-md-start text-center">
-                <h6 class="footer-title">Legal</h6>
+                <h6 class="footer-title">Office Details</h6>
                 <ul class="list-unstyled">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms &amp; Conditions</a></li>
-                    <li><a href="#">Return Policy</a></li>
+                    <li><a ><p>Admin Address:<br>CSM Complex, 1st floor, Ponnagar, Salem Main Road, Namakkal, Tamil Nadu 637001</p></a></li>
+                    <li><a href="#"><p> Register Address:<br>
+                        JASFA FREEDOM TRADERS PRIVATE LIMITED<br>
+                        CO OPERATIVE SOCIETY BUILDING,<br>
+                        SALEM MAIN ROAD KAVERIPATTINAM, KRISHNAGIRI, TAMILNADU, INDIA - 635112</p></a></li>
                 </ul>
             </div>
         </div>
+    </div>
+      <div class="footer-bottom">
+      <div class="social-links">
+        <a><i class="bi bi-facebook"></i></a>
+        <a><i class="bi bi-instagram"></i></a>
+        <a><i class="bi bi-twitter"></i></a>
+        <a><i class="bi bi-youtube"></i></a>
+      </div>
+      <p>Copyright © 2025 JP Group of Company Pvt Ltd</p>
     </div>
 </footer>
